--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span class="heading-primary--main">Outdoors</span>
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
-                <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+                <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
             </div>
         </header>
 
@@ -125,7 +125,7 @@
             </section>
 
             <!-- tours section -->
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -158,7 +158,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">£297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">£497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -218,7 +218,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">£897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -354,5 +354,24 @@
                 </div>
             </div>
         </footer>
+
+        <!-- popup -->
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__imgage">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__imgage">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum placeat ipsa esse et, sunt quo dolorem? Nulla soluta aliquid asperiores deleniti, deserunt eum aperiam laudantium accusamus molestias rerum eveniet sunt! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et laborum necessitatibus totam magnam, vitae alias quae non sapiente? Explicabo iste voluptas molestiae quia illum quam at tenetur nemo culpa provident. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum placeat ipsa esse et, sunt quo dolorem? Nulla soluta aliquid asperiores deleniti, deserunt eum aperiam laudantium accusamus molestias rerum eveniet sunt! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et laborum necessitatibus totam magnam, vitae alias quae non sapiente? Explicabo iste voluptas molestiae quia illum quam at tenetur nemo culpa provident.
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
