--- a/index.html
+++ b/index.html
@@ -71,9 +71,23 @@
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                            <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                                 src="img/nat-1-large.jpg"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                                 alt="Photo 1"
+                                 class="composition__photo composition__photo--p1">
+
+                            <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                                 src="img/nat-2-large.jpg"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                                 alt="Photo 2"
+                                 class="composition__photo composition__photo--p2">
+
+                            <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                                 src="img/nat-3-large.jpg"
+                                 sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                                 alt="Photo 3"
+                                 class="composition__photo composition__photo--p3">
                         </div>
                     </div>
                 </div>
@@ -333,7 +347,12 @@
         <!-- footer section -->
         <footer class="footer">
             <div class="footer__logo-box">
-                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+                <picture class="footer_log">
+                    <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" 
+                            media="(max-width: 37.5em)">
+                    <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo"
+                         src="img/logo-green-2x.png">
+                </picture>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
@@ -367,7 +386,7 @@
                     <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                     <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
                     <p class="popup__text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum placeat ipsa esse et, sunt quo dolorem? Nulla soluta aliquid asperiores deleniti, deserunt eum aperiam laudantium accusamus molestias rerum eveniet sunt! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et laborum necessitatibus totam magnam, vitae alias quae non sapiente? Explicabo iste voluptas molestiae quia illum quam at tenetur nemo culpa provident. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum placeat ipsa esse et, sunt quo dolorem? Nulla soluta aliquid asperiores deleniti, deserunt eum aperiam laudantium accusamus molestias rerum eveniet sunt! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et laborum necessitatibus totam magnam, vitae alias quae non sapiente? Explicabo iste voluptas molestiae quia illum quam at tenetur nemo culpa provident.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum placeat ipsa esse et, sunt quo dolorem? Nulla soluta aliquid asperiores deleniti, deserunt eum aperiam laudantium accusamus molestias rerum eveniet sunt! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et laborum necessitatibus totam magnam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum placeat ipsa esse et, sunt quo dolorem? Nulla soluta aliquid asperiores deleniti, deserunt eum aperiam laudantium accusamus molestias rerum eveniet sunt! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et laborum necessitatibus totam magnam, vitae alias quae non sapiente?
                     </p>
                     <a href="#" class="btn btn--green">Book now</a>
                 </div>
